// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly 1`] = `
<View
  0={
    Object {
      "children": <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
    >
        Hello world
    </Text>,
      "containerStyle": Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D1D5",
          "borderRadius": 2,
          "borderWidth": 0,
        },
      ],
      "dividerStyle": Array [
        Object {
          "backgroundColor": "#D0D1D5",
        },
      ],
      "titleStyle": Array [
        Object {
          "color": "#373856",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 27,
          "fontWeight": "800",
          "left": 0,
          "lineHeight": 34,
          "margin": 0,
          "marginBottom": 4,
          "right": 0,
        },
        Object {
          "marginBottom": 15,
        },
      ],
    }
  }
  1={Array []}
  2={Array []}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 0,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Card w/ Image renders correctly 1`] = `
<View
  0={
    Object {
      "children": <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
    >
        Hello world
    </Text>,
      "containerStyle": Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D1D5",
          "borderRadius": 2,
          "borderWidth": 0,
        },
      ],
      "dividerStyle": Array [
        Object {
          "backgroundColor": "#D0D1D5",
        },
      ],
      "image": 1,
      "titleStyle": Array [
        Object {
          "color": "#373856",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 27,
          "fontWeight": "800",
          "left": 0,
          "lineHeight": 34,
          "margin": 0,
          "marginBottom": 4,
          "right": 0,
        },
        Object {
          "marginBottom": 15,
        },
      ],
    }
  }
  1={Array []}
  2={Array []}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 0,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Card w/ Title renders correctly 1`] = `
<View
  0={
    Object {
      "children": <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
    >
        Hello world
    </Text>,
      "containerStyle": Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D1D5",
          "borderRadius": 2,
          "borderWidth": 0,
        },
      ],
      "dividerStyle": Array [
        Object {
          "backgroundColor": "#D0D1D5",
        },
      ],
      "title": "With Title",
      "titleStyle": Array [
        Object {
          "color": "#373856",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 27,
          "fontWeight": "800",
          "left": 0,
          "lineHeight": 34,
          "margin": 0,
          "marginBottom": 4,
          "right": 0,
        },
        Object {
          "marginBottom": 15,
        },
      ],
    }
  }
  1={Array []}
  2={Array []}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 0,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Containerstyle renders correctly 1`] = `
<View
  0={
    Object {
      "children": <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
    >
        Hello world
    </Text>,
      "containerStyle": Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D0D1D5",
          "borderRadius": 2,
          "borderWidth": 0,
        },
      ],
      "dividerStyle": Array [
        Object {
          "backgroundColor": "#D0D1D5",
        },
      ],
      "titleStyle": Array [
        Object {
          "color": "#373856",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 27,
          "fontWeight": "800",
          "left": 0,
          "lineHeight": 34,
          "margin": 0,
          "marginBottom": 4,
          "right": 0,
        },
        Object {
          "marginBottom": 15,
        },
      ],
    }
  }
  1={
    Object {
      "backgroundColor": "red",
      "borderColor": "red",
      "borderRadius": 5,
      "borderWidth": 2,
    }
  }
  2={Array []}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 0,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;
